[package]
name = "puttr"
version = "0.2.0"
edition = "2021"
authors = ["Brad Montgomery <brad@bradmontgomery.net>"]

[dependencies]
iron = "0.5"
router = "0.5"
mime = "0.3"
params = "0.7"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
lazy_static = "1.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
